--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,7 +96,8 @@
         <a href="accountcreate">アカウント作成画面へ</a><br />
         <a href="admin">管理者メニューへ</a><br />
         <a href="groupcreate">グループ作成画面へ</a><br />
-        <a href="groupinfo">グループ詳細画面へ</a>
+        <a href="groupinfo">グループ詳細画面へ</a><br />
+        <a href="chat">チャット画面へ</a>
       </main>
     </div>
 
