--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -55,7 +55,7 @@
           <h1>管理者メニュー</h1>
 
           <div class="menu-buttons">
-            <a th:href="@{/accountadmin/list}" button class="admin-btn">アカウント管理</a>
+            <a th:href="@{/accountadmin}" button class="admin-btn">アカウント管理</a>
           </div>
         </div>
       </main>
