チャット画面作成

--- a/src/main/resources/templates/chat/index.html
+++ b/src/main/resources/templates/chat/index.html
@@ -54,23 +54,7 @@
         </div>
 
         <!-- ✅ チャットエリア -->
-        <div class="chat-area">
-          <div class="message left">
-            <div class="avatar">T</div>
-            <div class="bubble">
-              あああああああああああああああああああああああああああああああああああああああああああああ
-            </div>
-            <div class="reaction"><span class="emoji">😊</span> 21</div>
-          </div>
-
-          <div class="message right">
-            <div class="avatar">R</div>
-            <div class="bubble">
-              ああああああああああああああああああああああああああああああああああああ
-            </div>
-            <div class="reaction"><span class="emoji">😊</span> 2</div>
-          </div>
-        </div>
+        <div class="chat-area"></div>
 
         <!-- ✅ メッセージ入力欄 -->
         <div class="chat-input-area">
