アカウント編集に遷移

--- a/src/main/resources/templates/accountadmin/index.html
+++ b/src/main/resources/templates/accountadmin/index.html
@@ -92,7 +92,7 @@
               <span class="col-number" th:text="${user.number} ?: '-'"></span>
 
               <span class="col-actions">
-                <a th:href="@{'/accountadmin/edit?id=' + ${user.id}}">
+                <a th:href="@{'/accountedit?id=' + ${user.id}}">
                   <i class="fas fa-pencil-alt edit-icon"></i>
                 </a>
 
