--- a/src/main/resources/templates/accountedit/index.html
+++ b/src/main/resources/templates/accountedit/index.html
@@ -11,13 +11,15 @@
       <h1>アカウント編集</h1>
 
       <form
-        th:action="@{/accountcreate}"
+        th:action="@{/accountedit/update}"
         method="post"
         th:object="${accountForm}"
         class="account-form"
       >
         <div th:if="${message}" class="success-message" th:text="${message}"></div>
         <div th:if="${errorMessage}" class="error-message" th:text="${errorMessage}"></div>
+
+        <input type="hidden" name="id" th:field="*{id}" />
 
         <div class="form-group">
           <label for="user-id">ユーザID</label>
@@ -36,7 +38,7 @@
             type="password"
             id="password"
             th:field="*{password}"
-            placeholder="パスワードを入力"
+            placeholder="パスワードを入力 (変更する場合のみ)"
             required
           />
         </div>
@@ -81,7 +83,7 @@
           <input type="number" id="number" th:field="*{number}" />
         </div>
 
-        <button type="submit" class="create-button">作成する</button>
+        <button type="submit" class="create-button">更新する</button>
       </form>
     </div>
   </body>
