--- a/src/main/resources/templates/accountcreate/index.html
+++ b/src/main/resources/templates/accountcreate/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>アカウント作成</title>
+
+    <link rel="icon" th:href="@{/images/logo.png}" />
+
     <link rel="stylesheet" href="/css/accountcreate.css" />
   </head>
   <body>
