--- a/src/main/resources/templates/chat/index.html
+++ b/src/main/resources/templates/chat/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ホーム</title>
+    <title>チャット</title>
 
     <link rel="icon" th:href="@{/images/logo.png}" />
 
