--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Slat ログイン</title>
+
+    <link rel="icon" th:href="@{/images/logo.png}" />
+
     <link rel="stylesheet" href="/css/login.css" />
   </head>
   <body>
