--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,12 @@
           <img th:src="@{/images/group_icon.png}" alt="group" class="group-icon-img" />
         </a>
 
+        <!-- ✅ ホームボタン -->
+        <a th:href="@{/home}" class="home-btn">
+          <span class="home-icon">🏠</span>
+          <span class="home-text">ホーム</span>
+        </a>
+
         <p class="menu-title">▼ ダイレクトメッセージ</p>
         <ul class="menu-list">
           <li><span class="icon">A</span> <span class="menu-text">○○○</span></li>
